some fixes on mobile display and relatives unit

--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@
 }
 
 /* Variables */
-:root {
+/* :root {
 
-}
+} */
 
 
 html,
@@ -22,7 +22,7 @@ body {
 }
 
 #board {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     position: relative;
     overflow: hidden;
@@ -34,7 +34,7 @@ body {
     top: 0;
     z-index: 1;
     width: 100%;
-    height: 6rem;
+    height: 95px;
     padding-top: 1rem;
     border-bottom: solid rgba(0, 0, 0, 0.1);
     display: flex;
@@ -53,18 +53,19 @@ body {
 }
 
 .score > span {
-    font-size: clamp(1rem, 2.5vw, 2rem);
+    font-size: clamp(1.25rem, 2.5vh, 2rem);
     font-weight: 800;
 }
 
 
 .card {
-    width: 320px;
-    height: 500px;
+    /* min-width: 500px; */
+    max-height: 45vh;
+    aspect-ratio: 16/25;
     position: absolute;
     top: 50%;
     left: 50%;
-
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -98,6 +99,7 @@ body {
     letter-spacing: .05rem;
     font-weight: 900;
     text-align: center;
+    font-size: clamp(1rem, 2vh, 2rem);
 }
 
 .details-trigger {
